fix: Correct the overflow

--- a/front/src/components/widgets/GalleryPhotoWidget.module.css
+++ b/front/src/components/widgets/GalleryPhotoWidget.module.css
@@ -4,5 +4,6 @@
     max-height: 200px;
     margin-top: 1.5rem;
     object-fit: cover;
-    border: 2px solid #38679D;
+    border-top: 2px solid #38679D;
+    border-bottom: 2px solid #38679D;
 }
